--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
-  "dependencies": {
-    "express": "^4.12.4",
-    "socket.io": "^1.3.5"
-  }
+	"name": "drawing-app",
+	"version": "0.0.1",
+	"description": "shared browser canvas",
+	"dependencies": {
+		"express": "^4.12.4",
+		"socket.io": "^1.3.5"
+	},
+	"devDependencies": {
+		"autoprefixer": "^5.1.1",
+		"node-sass": "^3.1.2"
+	},
+	"scripts": {
+		"build:css": "node-sass public/styles/sass -o public/styles/ && autoprefixer public/styles/*.css",
+		"watch:css": "watch 'npm run build:css' public/styles/sass"
+	}
 }
