--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-	"name": "drawing-app",
-	"version": "0.0.1",
-	"description": "shared browser canvas",
-	"dependencies": {
-		"express": "^4.12.4",
-		"socket.io": "^1.3.5"
-	},
-	"devDependencies": {
-		"autoprefixer": "^5.1.1",
-		"node-sass": "^3.1.2"
-	},
-	"scripts": {
-		"build:css": "node-sass public/styles/sass -o public/styles/ && autoprefixer public/styles/*.css",
-		"watch:css": "watch 'npm run build:css' public/styles/sass"
-	}
+  "name": "drawing-app",
+  "version": "0.0.1",
+  "description": "shared browser canvas",
+  "dependencies": {
+    "express": "^4.12.4",
+    "socket.io": "^1.3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^5.1.1",
+    "node-sass": "^3.1.2",
+    "postcss": "^4.1.11",
+    "postcss-cli": "^1.3.1",
+    "watch": "^0.16.0"
+  },
+  "scripts": {
+    "build:css": "node-sass -o public/styles/css public/styles/sass/ && postcss -u autoprefixer -d public/styles/css/ public/styles/css/*.css",
+    "watch:css": "watch 'npm run build:css' public/styles/sass --wait=1"
+  }
 }
